Fix place__text width on mobile screen

--- a/styles/blocks/place/__text/place__text.css
+++ b/styles/blocks/place/__text/place__text.css
@@ -12,5 +12,6 @@
 @media screen and (max-width: 767px) {
   .place__text {
     line-height: normal;
+    max-width: calc(100% - 2 * 20px);
   }
 }
